--- a/3 pdf/Footer page/style.css
+++ b/3 pdf/Footer page/style.css
@@ -1,20 +1,77 @@
-.footer {
-    height: 230px;
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.wrapper {
+    position: relative;
+    min-height: 100%;
+    overflow: auto;
+}
+
+.header {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
-    background: #2a4f6e;
+    height: 80px;
+    background-color: royalblue;
 }
 
-.footer-block {
+.content {
+    padding-top: 80px;
+    padding-bottom: 230px;
+    background-color: rosybrown;
+    width: 100%;
+}
+
+.footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 230px;
+    background-color: #2a4f6e;
+}
+
+.block {
+    min-width: 160px;
+    flex-basis: 30%;
+    padding: 10px;
+    margin-left: 30px;
+}
+
+.footer .socialNetwork {
+    min-width: 250px;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row nowrap;
+    background-color: red;
+    align-items: center;
+}
+
+.footer .info {
     height: 150px;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row nowrap;
 }
 
-.footer-block-inside {
+.footer a {
+    flex-basis: 64px;
+    margin: 5px;
+    width: 64px;
+    height: 64px;
+    display: block;
     float: left;
-    width: 30%;
-    height: 90%;
-    margin: 10px auto;
-    margin-left: 1.65%;
-    margin-right: 1.65%;
+}
+
+.copyright {
+    margin: 0px;
+    text-align: center;
+    size: 5px;
 }
 
 .footer br {
@@ -25,44 +82,20 @@
     color: white;
 }
 
-.p-flooter-bottom {
-    margin: 0px;
-    text-align: center;
-    size: 5px;
-}
-
 .footer p:hover {
     text-decoration: underline;
 }
 
 .fb {
     background: url(images/fb_gray.png);
-    display: block;
-    width: 64px;
-    height: 64px;
-    float: left;
-    margin-left: 20px;
-    margin-top: 40px;
 }
 
 .insta {
     background: url(images/insta_gray.png);
-    display: block;
-    width: 64px;
-    height: 64px;
-    float: left;
-    margin-left: 20px;
-    margin-top: 40px;
 }
 
 .youtube {
     background: url(images/youtube_gray.png);
-    display: block;
-    width: 64px;
-    height: 64px;
-    float: left;
-    margin-left: 20px;
-    margin-top: 40px;
 }
 
 .fb:hover {
